@@ -1,3 +1,9 @@
+** v2.11, xx.xx.2016**
+* Fixed the empty space on unitframes. Finally, thanks goes to Benik. :)
+* "Maybe" fixed a nil error in changelog.
+* More work on the ObjectivTracker skin.
+* More work on the Quest skin
+
 ** v2.10, 10.08.2016**
 * Overhaul the install process for AddOns.
 * Some tweaks to the Layouts.
